Added code for getting from server

--- a/index.html
+++ b/index.html
@@ -29,20 +29,17 @@
       </div>
     </nav>
   </header>
-  <main role="main">
-    <article class="stocksTop10">
-      <div class="card">
-          <table id="stockList" class="table">
-            <thead>
-              <tr>
-                <th>Top Stocks</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-    </article>
-  </main>
+
+  <article>
+    <ul class="list-group">
+      <li class="list-group-item">Cras justo odio</li>
+      <li class="list-group-item">Dapibus ac facilisis in</li>
+      <li class="list-group-item">Morbi leo risus</li>
+      <li class="list-group-item">Porta ac consectetur ac</li>
+      <li class="list-group-item">Vestibulum at eros</li>
+    </ul>
+  </article>
+
   <footer>
     <p>&copy; Not really copyright but looks cool right</p>
   </footer>
