TODO add stockinformation

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
   </header>
 
   <article>
-    <div id="stocklist">
-
-    </div>
+    <div id="stocklist"></div>
+    <div id="stockInformation"></div>
   </article>
 
   <footer>
